@@ -672,59 +672,6 @@ AC_PATH_PROG(PATH_TO_TRACEROUTE,traceroute)
 AC_DEFINE_UNQUOTED(TRACEROUTE_COMMAND,"$PATH_TO_TRACEROUTE")
 
 
-dnl Find ping and (the infamous) proper syntax...
-AC_PATH_PROG(PATH_TO_PING,ping)
-
-AC_ARG_WITH(ping_command,--with-ping-command=<syntax> sets syntax for ping,PING_COMMAND=$withval)
-if test -n "$PING_COMMAND"
-then
-        echo "      ping syntax... (command-line) $PING_COMMAND"
-        if test -n "$PING_PACKETS_FIRST"
-        then
-                AC_DEFINE_UNQUOTED(PING_PACKETS_FIRST,"$PING_COMMAND")
-        fi
-elif [ping -n -U -c 1 127.0.0.1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n -U -c %d %s"
-        AC_DEFINE_UNQUOTED(PING_PACKETS_FIRST,"$PING_COMMAND")
-        echo "      ping syntax... $PATH_TO_PING -n -U -c <count> <host>"
-elif [ping -n -c 1 127.0.0.1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n -c %d %s"
-        AC_DEFINE_UNQUOTED(PING_PACKETS_FIRST,"$PING_COMMAND")
-        echo "      ping syntax... $PATH_TO_PING -n -c <count> <host>"
-elif [ping -n 127.0.0.1 -c 1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n %s -c %d"
-        echo "      ping syntax... $PATH_TO_PING -n <host> -c <count>"
-elif [ping 127.0.0.1 -n 1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING %s -n %d"
-        echo "      ping syntax... $PATH_TO_PING <host> -n <count>"
-elif [ping -n -s 127.0.0.1 56 1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n -s %s 56 %d"
-        echo "      ping syntax... $PATH_TO_PING -n -s <host> 56 <count>"
-elif [ping -n -h 127.0.0.1 -s 56 -c 1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n -h %s -s 56 -c %d"
-        echo "      ping syntax... $PATH_TO_PING -n -h <host> -s 56 -c <count>"
-elif [ping -n -s 56 -c 1 127.0.0.1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n -s 56 -c %d %s"
-        AC_DEFINE_UNQUOTED(PING_PACKETS_FIRST,"$PING_COMMAND")
-        echo "      ping syntax... $PATH_TO_PING -n -s 56 -c <count> <host>"
-elif [ping -n -c 1 127.0.0.1 2>/dev/null | egrep -i "^round-trip|^rtt" >/dev/null]
-then
-        PING_COMMAND="$PATH_TO_PING -n -c %d %s"
-        AC_DEFINE_UNQUOTED(PING_PACKETS_FIRST,"$PING_COMMAND")
-        echo "      ping syntax... $PATH_TO_PING -n -c <count> <host>"
-else
-        echo "** Unable to find usable ping syntax"
-fi
-AC_DEFINE_UNQUOTED(PING_COMMAND,"$PING_COMMAND")
-
-
 
 dnl Package directory for Solaris pkgmk (and other OSs, eventually)
 VERSION=`grep 1.0 common/common.h | cut -d ' ' -f 3 | sed 's/"//g'`
@@ -829,7 +776,6 @@ echo " ------------------------"
 
 AC_MSG_RESULT([                 HTML URL:  http://localhost$htmurl/])
 AC_MSG_RESULT([                  CGI URL:  http://localhost$cgiurl/])
-AC_MSG_RESULT([       Ping (used by WAP):  $PING_COMMAND])
 AC_MSG_RESULT([ Traceroute (used by WAP):  $PATH_TO_TRACEROUTE])
 
 echo ""
