@@ -7,6 +7,7 @@ Nagios Change Log
 * Bug fixes in template-based object code
 * Bug fix in tac CGI for counting host and service states properly
 * Default is now to check for external commands as often as possible
+* Ping syntax for WAP interface moved to CGI config file
 
 
 1.0b2 - 05/27/2002
